--- a/sass/sections/_modal.sass
+++ b/sass/sections/_modal.sass
@@ -19,8 +19,8 @@
   &__dialog
     position: relative
     max-width: 478px
-    mx-height: 487px
     padding: 33px 88px
+    padding-top: 33px
     background-color: $dark
     color: $light
     border-radius: 8px
@@ -46,7 +46,6 @@
     color: $light
     text-align: center
     margin: 0
-    margin-bottom: 15px
   &__form
     display: flex
     flex-direction: column
@@ -77,8 +76,6 @@
     font-size: 12px
     line-height: 15px
     outline: none
-  &__button
-    margin-top: 15px
 
   &__button
     min-width: 160px
@@ -104,3 +101,4 @@
     justify-content: space-between
     min-width: 302px
     align-items: center
+    margin-top: 15px
