--- a/sass/sections/_reviews.sass
+++ b/sass/sections/_reviews.sass
@@ -21,11 +21,12 @@
       flex-direction: column
       align-items: center
       padding: 0 62px 30px
+      z-index: 10
       &:before
         content: ''
         position: absolute
         top: 121px
-        right: 62px
+        right: 88px
         background-image: url(../img/quote-right.svg)
         background-repeat: no-repeat
         width: 70px
@@ -104,3 +105,4 @@
       color: #333333
       margin: auto
       text-align: left
+      z-index: 99
